2006-10-31  Ville Vainio  <vivainio@gmail.com>

	* strdispatch.py, completer.py, ipy_stock_completers.py:
	Allow str_key ("command") in completer hooks. Implement 
	trivial completer for 'import' (stdlib modules only). Rename 
	ipy_linux_package_managers.py to ipy_stock_completers.py.
	SVN completer.

2006-10-30  Ville Vainio  <vivainio@gmail.com>

	* Debugger.py, iplib.py (debugger()): Add last set of Rocky 
	Bernsteins's patches for pydb integration.
	http://bashdb.sourceforge.net/pydb/
	
	* strdispatch.py, iplib.py, completer.py, IPython/__init__.py,
	Extensions/ipy_linux_package_managers.py, hooks.py: Implement 
	custom completer hook to allow the users to implement their own 
	completers. See ipy_linux_package_managers.py for example. The 
	hook name is 'complete_command'. 

2006-10-28  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/UserConfig/ipythonrc-scipy: minor clenaups to remove old
	Numeric leftovers.

	* ipython.el (py-execute-region): apply Stefan's patch to fix
	garbled results if the python shell hasn't been previously started.

	* IPython/genutils.py (arg_split): moved to genutils, since it's a
	pretty generic function and useful for other things.

	* IPython/OInspect.py (getsource): Add customizable source
	extractor.  After a request/patch form W. Stein (SAGE).

	* IPython/irunner.py (InteractiveRunner.run_source): reset tty
	window size to a more reasonable value from what pexpect does,
	since their choice causes wrapping bugs with long input lines.

2006-10-28  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (%run): Save and restore the readline history from 
	file around %run commands to prevent side effects from 
	%runned programs that might use readline (e.g. pydb).

	* extensions/ipy_pydb.py: Adds %pydb magic when imported, for 
	invoking the pydb enhanced debugger.

2006-10-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (ifile): Remove all methods that